Fixed same hero selection label in pick screen not showing up + bad styling

--- a/content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/multiteam_hero_select_overlay.css
+++ b/content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/multiteam_hero_select_overlay.css
@@ -2,7 +2,7 @@
 {
 	width: 100%;
 	height: 190px;
-	margin-top: 10px;
+	margin-top: 5px;
    
 }
 
